# 8004

./: Cargo.toml  README.md
abi/: IdentityRegistry.abi.json  ReputationRegistry.abi.json  ValidationRegistry.abi.json
examples/: identity.rs  reputation.rs  validation.rs
src/: identity.rs  ipfs.rs  lib.rs  main.rs  reputation.rs  validation.rs
