[package]
name = "eip8004"
version = "0.1.0"
edition = "2024"
authors = ["Dev <hi@zpaynow.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/zpaynow/8004"
keywords = ["ai", "ethereum"]
description = "ERC-8004: Trustless Agents"

[dependencies]
alloy = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }